--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -29,7 +29,9 @@
                             <label for="message" class="text-muted">Message</label>
                         </div>
                         <div class="d-grid">
-                            <button class="btn btn-primary btn-lg" id="submitButton" type="submit">Submit</button>
+                            <button class="btn btn-gradient-primary btn-lg" id="submitButton" type="submit">
+                                <i class="bi bi-envelope"></i> Send
+                            </button>
                         </div>
                     </form>
                 </div>
