--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -16,7 +16,7 @@
                         <div class="fs-3 fw-light text-muted fade-in-up">Your Trusted Partner for Exceptional Quality</div>
                         <h1 class="display-3 fw-bolder mb-5 fade-in-up"><span class="text-gradient d-inline">Request Your Free Estimate Today</span></h1>
                         <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                            <a class="btn btn-gradient-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder btn-pulse" href="sms:+1234567890">
+                            <a class="btn btn-gradient-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder btn-pulse" href="sms:{{ CLIENT_SMS }}">
                                 <i class="bi bi-chat-dots-fill"></i> Send SMS
                             </a>                            
                             <a class="btn btn-outline-gradient btn-lg px-5 py-3 fs-6 fw-bolder" href="{% url 'projects' %}">Projects</a>
