--- a/templates/home/projects.html
+++ b/templates/home/projects.html
@@ -10,27 +10,21 @@
         <div class="text-center mb-5">
             <p class="text-muted fs-6 m-0 text-zoom">Text Us</p>
             <h1 class="display-5 fw-bolder mb-0">
-                <a href="sms:+14078101512" class="text-gradient d-inline">(407) 810-1512</a>
+                <a href="sms:{{ CLIENT_SMS }}" class="text-gradient d-inline">{{ CLIENT_NUMBER_STR }}</a>
             </h1>
         </div>
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-11 col-xl-9 col-xxl-8">
-                <!-- Project Section 1 -->
+                {% for project in projects %}
+                <!-- Project Section -->
                 <div class="project-section d-flex flex-column flex-md-row align-items-center mb-5">
-                    <img class="img-fluid mb-4 mb-md-0 me-md-4" src="{% static 'assets/projects/projects1.jpg' %}" alt="Project Image 1">
+                    <img class="img-fluid mb-4 mb-md-0 me-md-4" src="{{ project.image_thumbnail.url }}" alt="Project Image {{ forloop.counter }}">
                     <div class="text-center text-md-start">
-                        <h2 class="fw-bolder text-muted fade-in">Project Name 1</h2>
-                        <p class="text-muted fade-in">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                        <h2 class="fw-bolder text-muted fade-in">{{ project.title }}</h2>
+                        <p class="text-muted fade-in">{{ project.description }}</p>
                     </div>
                 </div>
-                <!-- Project Section 2 -->
-                <div class="project-section d-flex flex-column flex-md-row align-items-center mb-5">
-                    <img class="img-fluid mb-4 mb-md-0 me-md-4" src="{% static 'assets/projects/projects2.jpg' %}" alt="Project Image 2">
-                    <div class="text-center text-md-start">
-                        <h2 class="fw-bolder text-muted fade-in">Project Name 1</h2>
-                        <p class="text-muted fade-in">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                    </div>
-                </div>
+                {% endfor %}
                 <!-- Add more project sections as needed -->
             </div>
         </div>
@@ -46,18 +40,18 @@
         <div class="contact-buttons text-center">
             <h2 class="display-4 fw-bolder mb-4 fade-in">
                 Your Project, Our Expertise: Building Success Together
-                <a href="sms:+14078101512" class="btn btn-outline-light mx-2">
+                <a href="sms:{{ CLIENT_SMS }}" class="btn btn-outline-light mx-2">
                     <i class="bi bi-chat-dots btn-rotate icon-large"></i>
                 </a>
             </h2>
         </div>
 
         <div class="contact-buttons text-center">
-            <a href="mailto:contact@example.com" class="btn btn-outline-light mx-2">
+            <a href="mailto:{{ EMAIL_HOST_USER }}" class="btn btn-outline-light mx-2">
                 <i class="bi bi-envelope icon-medium"></i>
             </a>
 
-            <a href="tel:+14078101512" class="btn btn-outline-light mx-2">
+            <a href="tel:{{ CLIENT_SMS }}" class="btn btn-outline-light mx-2">
                 <i class="bi bi-telephone icon-medium"></i>
             </a>
             
@@ -70,4 +64,3 @@
     </div>
 </section>
 {% endblock content %}
-    
